--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.3.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "validator": "^13.11.0"
   }
 }
