--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "gsap": "^3.12.5",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.10",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
