--- a/admin/package.json
+++ b/admin/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.2",
+    "@emotion/react": "^11.11.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.11",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
